--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,9 @@ pandas==1.1.4
 numpy==1.18.5
 nltk==3.5
 bert-extractive-summarizer==0.5.2
+lxml==4.6.2 
+python-docx==0.8.10
+PyPDF2==1.26.0
+striprtf==0.0.12
+XlsxWriter==1.3.7 
+python-pptx==0.6.18
