--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,22 @@
-Flask==1.1.2
-gunicorn==19.9.0
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
-regex==2020.11.13
-allennlp==1.3.0 
-tokenizers==0.9.4
-scikit-learn==0.23.2
-pandas==1.1.4
-numpy==1.18.5
-nltk==3.5
-bert-extractive-summarizer==0.5.2
-lxml==4.6.2 
-python-docx==0.8.10
+allennlp==2.5.0
+allennlp-models==2.5.0
+bert-extractive-summarizer==0.7.1
+Flask==2.0.1
+Flask-Mail==0.9.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
+lxml==4.6.3
+MarkupSafe==2.0.1
+nltk==3.6.2
+numpy==1.19.5
+pandas==1.2.4
 PyPDF2==1.26.0
-striprtf==0.0.12
-XlsxWriter==1.3.7 
-python-pptx==0.6.18
+python-docx==0.8.11
+python-pptx==0.6.19
+regex==2021.4.4
+scikit-learn==0.24.2
+striprtf==0.0.13
+summarizer==0.0.7
+tokenizers==0.10.3
+Werkzeug==2.0.1
+XlsxWriter==1.4.3
